[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/MovingTank.gd" type="Script" id=1]
[ext_resource path="res://scenes/tanks/abstractions/EnemyTank.tscn" type="PackedScene" id=2]

[node name="MovingTank" instance=ExtResource( 2 )]
show_behind_parent = false
script = ExtResource( 1 )

[node name="ChangeDirTimer" type="Timer" parent="." index="6"]
wait_time = 1.5
autostart = true

[node name="CollisionCheckTimer" type="Timer" parent="." index="7"]
wait_time = 0.2
autostart = true

[connection signal="timeout" from="ChangeDirTimer" to="." method="_on_ChangeDirTimer_timeout"]
[connection signal="timeout" from="CollisionCheckTimer" to="." method="_on_CollisionCheckTimer_timeout"]
